[-] * Fixed parsing of phone number from incoming calls.
[-] * Added ID for Nokia 1112.
[-] * Dropped obsolete packaging/debian and point users to proper packages.
[-] * Fix crash when operator logo is empty.
[-] * Fix memory leak in SMS backup.
[-] * Fixed processing of SMSD outbox with PostgreSQL (bug #803).
[-] * Automatic detection of lib64 directory for installation.
    
20090116 - 1.22.91

[-] * Fixed setting remote number for SMS in some cases.
[-] * Fixed compilation under cygwin.
[-] * Externalize eventlog support to ease Cygwin compilation.
[!] * Integrate python-gammu into Gammu, they are anyway bound quite
      tightly together.
[!] * Python C module is now gammu._gammu and not gammu.Core.
[+] * Introduce testing for python module.
[-] * Fixed decoding of formatted EMS messages.
[-] * Fixed reading of RTTL ringtones.
[-] * Fixed crash with too many animation frames.
[-] * Fixed possible crash in LMB writer.
[-] * Fixed several memory leaks.
[+] * Better support for Samsung phones (bug #790).
[-] * Fixed Windows Service Startup (bug #451).
[+] * New possibility to run more instances of Windows Service (bug #451).
    
20090109 - 1.22.90

[-] * Fix some memory leaks found by cppcheck.
[-] * Fix unsafe sprintf usage in some modules.
[!] * Improve debugging facilities to use state machine debug
      configuration when possible.
[!] * Separate SMS daemon out of gammu binary.
[!] * SMSD now requires [gammu] section in config file.
[!] * UsePhoneDB option replaced by chekfirmware command.
[+] * Added pkgconfig support for gsmsd (SMSD library).
[+] * Debug logging can be handled by custom function in application.
[+] * SMSD log now includes gammu log messages.
[+] * SMSD now can log to syslog.
[+] * SMSD can now deamonize itself.
[+] * All callbacks can now pass user data along.
[+] * SMSD can now write PID file.
[+] * Added man pages for gammu-smsd(1), gammu-smsdrc(5) and gammurc(5).
[+] * SMSD can now natively run as a Windows service (bug #451).