@@ -150,4 +150,5 @@ install (TARGETS libGammu
         RUNTIME DESTINATION "${INSTALL_BIN_DIR}"
         LIBRARY DESTINATION "${INSTALL_LIB_DIR}"
         ARCHIVE DESTINATION "${INSTALL_LIB_DIR}"
+        COMPONENT library
         )
