@@ -14,7 +14,7 @@ file(GLOB MAN1_PAGES "*.1")
 install (
     FILES ${MAN1_PAGES}
     DESTINATION "${INSTALL_MAN_DIR}/man1"
-    COMPONENT "man-pages"
+    COMPONENT "manpages"
     )
 
 file(GLOB MAN5_PAGES "*.5")
@@ -22,7 +22,7 @@ file(GLOB MAN5_PAGES "*.5")
 install (
     FILES ${MAN5_PAGES}
     DESTINATION "${INSTALL_MAN_DIR}/man5"
-    COMPONENT "man-pages"
+    COMPONENT "manpages"
     )
 
 file(GLOB MAN5_PAGES "*.7")
@@ -30,7 +30,7 @@ file(GLOB MAN5_PAGES "*.7")
 install (
     FILES ${MAN5_PAGES}
     DESTINATION "${INSTALL_MAN_DIR}/man7"
-    COMPONENT "man-pages"
+    COMPONENT "manpages"
     )
 
 # This should match list in admin/po4a.config
@@ -41,7 +41,7 @@ foreach(LANG cs de es id it pl ru)
     install (
         FILES ${MAN1_PAGES}
         DESTINATION "${INSTALL_MAN_DIR}/${LANG}/man1"
-        COMPONENT "man-pages"
+        COMPONENT "manpages"
         )
 
     file(GLOB MAN5_PAGES "${LANG}/*.5")
@@ -49,7 +49,7 @@ foreach(LANG cs de es id it pl ru)
     install (
         FILES ${MAN5_PAGES}
         DESTINATION "${INSTALL_MAN_DIR}/${LANG}/man5"
-        COMPONENT "man-pages"
+        COMPONENT "manpages"
         )
 
     file(GLOB MAN5_PAGES "${LANG}/*.7")
@@ -57,6 +57,6 @@ foreach(LANG cs de es id it pl ru)
     install (
         FILES ${MAN5_PAGES}
         DESTINATION "${INSTALL_MAN_DIR}/${LANG}/man7"
-        COMPONENT "man-pages"
+        COMPONENT "manpages"
         )
 endforeach(LANG)
